<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="336dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="72dp"
        android:text="@string/edit_name"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editProfileName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/nameLabel"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="33dp"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="166dp"
        android:text="@string/edit_number"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editPhoneNumberFirst"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/phoneNumberLabel"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="33dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/editPhoneNumberSecond"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/phoneNumberLabel"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="31dp"
        android:inputType="number" />

    <EditText
        android:id="@+id/editPhoneNumberThird"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/phoneNumberLabel"
        android:layout_marginStart="190dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="32dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/paymentLabel"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="255dp"
        android:text="@string/edit_payment"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/saveEditsButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginBottom="129dp"
        android:background="#ffe267"
        android:text="@string/save" />

    <Spinner
        android:id="@+id/editPaymentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paymentLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:entries="@array/payment_types" />

    <Button
        android:id="@+id/backFromEditsButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-135dp"
        android:layout_marginRight="-135dp"
        android:layout_marginBottom="61dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@+id/saveEditsButton"
        android:layout_toLeftOf="@+id/saveEditsButton"
        android:background="#bbbbbb"
        android:text="@string/back" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/epToolbar"
        app:title="@string/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/dash1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editPhoneNumberFirst"
        android:layout_alignRight="@+id/editPhoneNumberFirst"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-10dp"
        android:layout_marginRight="-10dp"
        android:layout_marginBottom="335dp"
        android:text="-"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editPhoneNumberFirst"
        android:layout_alignRight="@+id/editPhoneNumberFirst"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-100dp"
        android:layout_marginRight="-100dp"
        android:layout_marginBottom="335dp"
        android:text="-"
        android:textSize="20sp" />

</RelativeLayout>
