<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_bg_grey"
    tools:context=".MessageDriver">

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="86dp"
        android:text="@string/enter_start"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="173dp"
        android:text="@string/enter_dest"

        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/extraInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="265dp"
        android:text="@string/optional"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/editStart"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_below="@+id/startText"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:background="#cccccc"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/editDest"
        android:layout_width="364dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/endText"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="207dp"
        android:background="#cccccc"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/editExtra"
        android:layout_width="364dp"
        android:layout_height="48dp"
        android:layout_below="@+id/extraInfo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="219dp"
        android:background="#cccccc"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/sendRequest"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:background="#ffe267"
        android:text="@string/send" />

    <Button
        android:id="@+id/messageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendRequest"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="-71dp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/startText"
        android:layout_alignLeft="@+id/startText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:text="@string/driver"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/driverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-6dp"
        android:layout_marginLeft="-6dp"
        android:layout_marginTop="29dp"
        android:layout_toEndOf="@+id/messageBack"
        android:layout_toRightOf="@+id/messageBack"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="30sp" />
</RelativeLayout>